www-root/style-assets/css/inner-style.css
/* ... */
.bannerImage {
  max-width: 100%;
  padding: 5px;
  overflow: hidden;
  margin-bottom: 1.5em;
}

.fb-like-box {
  margin-bottom: 1.5em;
}

#fb-root {
  display: none;
}

.fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget span iframe[style] {
  width: 100% !important;
  height: 450px;
}

.depsocial {
  margin-bottom: 1.5em;
}

.ie8 .img-responsive {
  display: block;
  height: auto;
  max-width: 100%;
  vertical-align: middle;
  border: 0;
  -ms-interpolation-mode: bicubic;
}

.ie8 .navbar-inverse .navbar-brand {
  color: inherit;
}

.ie8 img {
  display: block;
  height: auto !important;
  max-width: 100%;
  vertical-align: middle;
  border: 0;
  -ms-interpolation-mode: bicubic;
}

img {
  max-width: 100%;
  height: auto;
}

.accordion-group {
  padding: 1em 1em .5em;
  border: 1px solid #e8e8e8;
}

.gsc-search-button.gsc-search-button-v2 {
  width: inherit;
  height: inherit;
}

.navbar-default {
  border: none;
}

.clickable {
  cursor: pointer;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
  font-style: normal;
  font-weight: 400;
}

h1 {
  color: #fff;
  font-size: 2.25rem;
  font-weight: 800;
}

h2 {
  font-weight: 700;
  color: #00447c;
  font-size: 1.75rem;
  width: 100%;
  margin: 0px;
  margin-bottom: 5px;
  line-height: 1.3;
}

h3 {
  color: #717073;
  font-size: 1.3rem;
  font-weight: 500;
  margin-bottom: 4px;
  margin-top: 2px;
}

h4 {
  color: #000000;
  font-size: 1.2rem;
  font-weight: 700;
  line-height: 1.3;
}

h5 {
  color: #535354;
  font-size: 1.125em;
  font-weight: 700;
}

h6 {
  background-color: #005fae;
  color: #fff;
  text-align: left;
  font-size: 16px;
  font-weight: 500;
  padding: 5px;
}

.readmore {
  text-align: right;
  margin-top: 10px;
}

.sup {
  font-size: 80%;
  vertical-align: top;
}

.sub {
  font-size: 80%;
  vertical-align: bottom;
}

.image_caption {
  font-size: 12px;
  line-height: 19px;
  color: #73787e;
}

.bordered {
  box-shadow: 0 0 2px #AAA;
  padding: 9px;
  border: 1px solid #ececec;
}

.well {
  background: #fff;
  border: 1px solid #e3e3e3;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
  margin-bottom: 20px;
  padding: 1.2575em;
}

.nav-header {
  color: #fff;
}

.form-control {
  width: 80%;
}

.img-thumbnail, .thumbnail {
  padding: .5em;
  margin: 1em;
}

.modal-dialog {
  padding-top: 12%;
}

.custom-search-input {
  margin-top: 5px;
  height: auto;
  padding: 3px;
  border: solid 1px #E4E4E4;
  border-radius: 6px;
  background-color: #fff;
}

.custom-search-input input {
  border: 0;
  box-shadow: none;
}

.custom-search-input button {
  margin: 2px 0 0 0;
  background: none;
  box-shadow: none;
  border: 0;
  color: #003663;
  padding: 0 8px 0 10px;
  border-left: solid 1px #ccc;
}

.custom-search-input button:hover {
  border: 0;
  box-shadow: none;
  border-left: solid 1px #ccc;
  background: none;
  color: #d11242;
}

hr {
  border-top: 1px solid #e6e1e1;
  margin-top: 15px;
  margin-bottom: 15px;
}

a.t4Edit-page {
  color: white;
  float: right;
}

a.t4Edit-page:hover {
  color: #003663;
  text-decoration: none !important;
  border-bottom: none !important;
}

#callstoaction {
  background-color: gray;
  width: 100%;
  margin-bottom: 15px;
  padding-left: 25px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.card {
  background: #fff;
  padding: 1em;
  border: 1px solid #d4d4d4;
  position: relative;
  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
}

.row.card {
  margin: 15px !important;
  margin-right: 15px !important;
  margin-top: 15px;
}

/* User Profile */
.contact-info > h4 {
  line-height: 20pt !important;
  font-size: 18pt !important;
  font-weight: 400 !important;
  color: #323e48 !important;
}

.contact-info > p {
  line-height: 16pt !important;
  font-size: 12pt !important;
}

.contact-card > * > img.img-responsive {
  width: 155px;
  border-radius: 50%;
  padding: 5px;
  display: inline;
}

.contact-info > hr {
  margin-top: 10px;
  margin-bottom: 10px;
  border: 0;
  border-top: 1px solid #eee;
}

.btn {
  transition: opacity 250ms ease-in-out;
  text-align: left;
  white-space: normal;
}

.btn:hover {
  opacity: 1.5;
  transition: opacity 250ms ease-in-out;
}

.btn-primary a {
  color: #fff;
}

.btn-primary a a:hover {
  text-decoration: none;
}

.custombtn {
  margin-bottom: 15px;
  width: 100%;
}
/* ... */

